Latest analysis, cleaning

--- a/1.general_framework.ipynb
+++ b/1.general_framework.ipynb
@@ -155,11 +155,7 @@
     }
    },
    "source": [
-    "# Preprocessing\n",
-    "\n",
-    "In this part we convert (when needed) the univariatedatasets into multivariate ones\n",
-    "\n",
-    "Spectrograms_vs_Cochleagrams : https://www.researchgate.net/publication/340510607_Speech_recognition_using_very_deep_neural_networks_Spectrograms_vs_Cochleagrams"
+    "# Preprocessing\n"
    ]
   },
   {
@@ -168,34 +164,6 @@
    "metadata": {},
    "source": [
     "## Multivariate generation (if not multivariate) and train_validation split"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "380ad0f4-4dbc-4b97-8d28-8ffb357715d7",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-20T11:11:18.377724Z",
-     "start_time": "2023-10-20T11:11:18.143305Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from datasets.multivariate_generation import extract_peak_frequencies\n",
-    "\n",
-    "freq_train_data = X_train_band if is_multivariate else X_train\n",
-    "flat_train_data = np.concatenate(freq_train_data, axis=0) if is_instances_classification else freq_train_data\n",
-    "\n",
-    "WINDOW_LENGTH = 10\n",
-    "\n",
-    "smoothed_peaks_freqs = extract_peak_frequencies(flat_train_data, sampling_rate, smooth=True, window_length=WINDOW_LENGTH, threshold=1e-5, nperseg=1024, visualize=True)\n",
-    "nb_smoothed = len(smoothed_peaks_freqs[0]) if is_multivariate else len(smoothed_peaks_freqs)\n",
-    "print(\"Smoothed peaks: \", nb_smoothed)\n",
-    "\n",
-    "peak_freqs = extract_peak_frequencies(flat_train_data, sampling_rate, smooth=True, window_length=1, threshold=1e-5, nperseg=1024, visualize=True)\n",
-    "nb_peaks = len(peak_freqs[0]) if is_multivariate else len(peak_freqs)\n",
-    "print(\"Non-smoothed peaks: \", nb_peaks)"
    ]
   },
   {
@@ -252,56 +220,6 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "7deb5b39-b2cf-471c-aa5a-ad2abcfe96fc",
-   "metadata": {},
-   "source": [
-    "import numpy as np\n",
-    "from scipy.signal import ShortTimeFFT\n",
-    "from scipy.signal.windows import hann\n",
-    "\n",
-    "def generate_multivariate_dataset(X, nperseg=32, fs=1.0, trim_edges=True):\n",
-    "    # Adjust nperseg if necessary\n",
-    "    if len(X) < nperseg:\n",
-    "        print(f\"Adjusting nperseg from {nperseg} to {len(X)} due to short input length.\")\n",
-    "        nperseg = len(X)\n",
-    "    # For maximum overlap (hop=1), we set hop to 1.\n",
-    "    hop = 1\n",
-    "    print(\"Using window length (nperseg):\", nperseg, \"and hop:\", hop)\n",
-    "    \n",
-    "    # Create a Hann window of length nperseg.\n",
-    "    win = hann(nperseg, sym=True)\n",
-    "    \n",
-    "    # Instantiate ShortTimeFFT. Here, mfft is left as None so the FFT length equals the window length.\n",
-    "    sft = ShortTimeFFT(win, hop, fs, scale_to='magnitude')\n",
-    "    \n",
-    "    # Compute the STFT. The stft method supports a 'padding' parameter.\n",
-    "    # Here, padding=True pads the signal to reduce boundary effects.\n",
-    "    S = sft.stft(X, padding=\"zeros\")\n",
-    "    \n",
-    "    # S has shape (n_freq, n_time). Taking the magnitude and transposing gives:\n",
-    "    X_band = np.abs(S).T  # Shape: (n_time, n_freq)\n",
-    "    \n",
-    "    # Optionally remove edge timesteps that may be affected by padding.\n",
-    "    edge_cut = 0\n",
-    "    if trim_edges:\n",
-    "        edge_cut = nperseg * 2  # Remove nperseg timesteps from both start and end.\n",
-    "        print(f\"Trimming the first and last {edge_cut} timesteps from the dataset.\")\n",
-    "        X_band = X_band[edge_cut:-edge_cut, :]\n",
-    "    \n",
-    "    return X_band, edge_cut\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Generate the multivariate dataset (frequency bands)\n",
-    "X_train_band, edge_cut = generate_multivariate_dataset(X_train, nperseg=32, trim_edges=True)\n",
-    "X_test_band, _ = generate_multivariate_dataset(X_test, nperseg=32, trim_edges=True)\n",
-    "\n",
-    "Y_train_trimmed = X_train[edge_cut:-edge_cut] \n",
-    "Y_test_trimmed  = X_test[edge_cut:-edge_cut]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "e6b859e5-c6dd-4086-ac56-42a7de3ed25e",
    "metadata": {
@@ -349,32 +267,6 @@
     "## Visualisation checks\n",
     "\n",
     "test if the filtering happened correctly"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "17fe7deb-cb87-4a1b-b171-3adeab53f233",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# Define the range around the merge point to plot\n",
-    "start_index = 0\n",
-    "end_index = 500\n",
-    "\n",
-    "sample = X_train_band if not is_instances_classification else X_train_band[0]\n",
-    "\n",
-    "# Plot for a subset N features within a range arround transition from train to test\n",
-    "N = 3\n",
-    "plt.figure(figsize=(16, 5))\n",
-    "for i in [1, 5, 14]: \n",
-    "    plt.plot(range(start_index, end_index), X_train[0][start_index:end_index, 0], label=f'Feature {i}')\n",
-    "plt.title('Feature Values Around Merge Point')\n",
-    "plt.xlabel('Sample Index')\n",
-    "plt.ylabel('Feature Value')\n",
-    "plt.legend()\n",
-    "plt.show()"
    ]
   },
   {
@@ -538,66 +430,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bde977ab-e2ee-43a7-a916-3ae2f4a95780",
-   "metadata": {},
-   "source": [
-    "## Noizing\n",
-    "\n",
-    "This is to optionnally add noize"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b49a01ef-7b49-4493-aa96-3ea65b18b118",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define noise parameter\n",
-    "noise_std = 0.001"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "97747959-8de6-4fdc-85e8-f8e6425b3399",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from datasets.preprocessing import add_noise\n",
-    "\n",
-    "#Train/Val/Test\n",
-    "if is_instances_classification:\n",
-    "    # UNI\n",
-    "    if not is_multivariate:\n",
-    "        X_train_noisy = [add_noise(instance, noise_std) for instance in tqdm(X_train, desc=\"TRAIN UNI\")]\n",
-    "        if X_val is not None:\n",
-    "            X_val_noisy = [add_noise(instance, noise_std) for instance in tqdm(X_val, desc=\"VAL UNI\")]\n",
-    "        X_test_noisy = [add_noise(instance, noise_std) for instance in tqdm(X_test, desc=\"TEST UNI\")]\n",
-    "        \n",
-    "    # MULTIX\n",
-    "    X_train_band_noisy = [add_noise(instance, noise_std) for instance in tqdm(X_train_band, desc=\"TRAIN MULTI\")]\n",
-    "    if X_val_band is not None:\n",
-    "        X_val_band_noisy = [add_noise(instance, noise_std) for instance in tqdm(X_val_band, desc=\"VAL MULTI\")]\n",
-    "    X_test_band_noisy = [add_noise(instance, noise_std) for instance in tqdm(X_test_band, desc=\"TEST MULTI\")]\n",
-    "\n",
-    "else:  #if prediction\n",
-    "    # UNI\n",
-    "    if not is_multivariate:\n",
-    "        X_train_noisy = add_noise(X_train, noise_std)\n",
-    "        X_test_noisy = add_noise(X_test, noise_std)\n",
-    "        if X_val is not None:\n",
-    "            X_val_noisy = add_noise(X_val, noise_std)\n",
-    "\n",
-    "    # MULTI\n",
-    "    X_train_band_noisy = add_noise(X_train_band, noise_std)\n",
-    "    if X_val_band is not None:\n",
-    "        X_val_band_noisy = add_noise(X_val_band, noise_std)\n",
-    "    X_test_band_noisy = add_noise(X_test_band, noise_std)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "25d6f51b-0c6c-4cec-bbd5-1fff0223efed",
    "metadata": {},
    "source": [
@@ -623,9 +455,7 @@
     "    \n",
     "if not is_multivariate:\n",
     "    X_pretrain_uni = np.array(X_train, dtype=object)[indices]\n",
-    "    X_pretrain_noisy = np.array(X_train_noisy, dtype=object)[indices]\n",
-    "X_pretrain_band = np.array(X_train_band, dtype=object)[indices]\n",
-    "X_pretrain_band_noisy = np.array(X_train_band_noisy, dtype=object)[indices]\n"
+    "X_pretrain_band = np.array(X_train_band, dtype=object)[indices]\n"
    ]
   },
   {
@@ -668,21 +498,6 @@
     "    common_size = X_train_band.shape[common_index]\n",
     "\n",
     "print(\"Common size:\", common_size)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "24988d03-a16b-46f7-b3f1-372452272905",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Min window size to get all the dynamics ? \n",
-    "min_window_size = sampling_rate/np.max(np.hstack(peak_freqs))\n",
-    "max_window_size = sampling_rate/np.min(np.hstack(peak_freqs))\n",
-    "\n",
-    "print(min_window_size)\n",
-    "print(max_window_size)"
    ]
   },
   {
@@ -881,8 +696,9 @@
    },
    "outputs": [],
    "source": [
-    "\n",
+    "from reservoir.reservoir import init_matrices\n",
     "from connexion_generation.hag import run_algorithm\n",
+    "from scipy import sparse\n",
     "\n",
     "target_rate = 0.7\n",
     "rate_spread = 0.1\n",
@@ -984,7 +800,7 @@
     "from scipy import stats\n",
     "\n",
     "# To set particular values\n",
-    "function_name = \"random_ee\"  # \"desp\" ou \"hadsp\" or \"random\"\n",
+    "function_name = \"random_ee\"  # \"desp\" ou \"hadsp\" or \"random_ee\"\n",
     "study = retrieve_best_model(function_name, dataset_name, is_multivariate, variate_type = \"multi\", data_type = \"normal\")\n",
     "\n",
     "# Print the best hyperparameters\n",
@@ -1009,16 +825,6 @@
     "eigen_random_multi = sparse.linalg.eigs(W_random_multi, k=1, which=\"LM\", maxiter=W_random_multi.shape[0] * 20, tol=0.1, return_eigenvectors=False)\n",
     "sr_random_multi = np.max(np.abs(eigen_random_multi))\n",
     "W_random_multi = W_random_multi * sr_random_multi / eigen_random_multi"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "10992886-1d95-43a3-bc8c-984c128435fe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "W_random_multi"
    ]
   },
   {
@@ -1267,112 +1073,6 @@
     "plt.legend(fontsize=fontsize)\n",
     "\n",
     "plt.grid(True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "42557f32-cb89-45ce-810c-15a35cb5d775",
-   "metadata": {},
-   "source": [
-    "## IPC"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "358478ca-5834-43ea-affb-9e94d0a84e48",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-09-09T11:11:47.398677Z",
-     "iopub.status.busy": "2024-09-09T11:11:47.398377Z",
-     "iopub.status.idle": "2024-09-09T11:12:00.366036Z",
-     "shell.execute_reply": "2024-09-09T11:12:00.362075Z",
-     "shell.execute_reply.started": "2024-09-09T11:11:47.398655Z"
-    },
-    "scrolled": true
-   },
-   "source": [
-    "from reservoir.reservoir import update_reservoir\n",
-    "import analysis.capacities as CAP\n",
-    "\n",
-    "MAX_DEG = 8\n",
-    "MAX_DEL = 100\n",
-    "\n",
-    "def cap2vec(capacities,maxdel=MAX_DEL,maxdeg=MAX_DEG):\n",
-    "    vec = np.zeros((maxdel,maxdeg))\n",
-    "    for idx in range(len(capacities)):\n",
-    "        delay=capacities[idx]['delay']\n",
-    "        degree=capacities[idx]['degree']\n",
-    "        if (delay<=maxdel) and (degree<=maxdeg):\n",
-    "            vec[delay-1,degree-1]+=capacities[idx]['score']\n",
-    "    return vec\n",
-    "\n",
-    "Win_capa = Win_hag_multi[Win_hag_multi != 0]\n",
-    "Win_capa = Win_capa.reshape(Win_capa.size, -1)\n",
-    "\n",
-    "\n",
-    "V_adsp = []\n",
-    "for j, W in enumerate(W_history[0:30:4]):    \n",
-    "    warmup_steps = 500\n",
-    "    warmups = 2.0*np.random.rand(warmup_steps,1)-1.0\n",
-    "\n",
-    "    # Important: capacity theory with Legendre polynomials assumes uniform random inputs in [-1,1]\n",
-    "    steps = 1000000\n",
-    "    inputs = 2.0*np.random.rand(steps, 1)-1.0\n",
-    "\n",
-    "    state = np.random.uniform(0, 1, n)\n",
-    "    for i in range(warmup_steps):\n",
-    "        state = update_reservoir(W , Win_capa, warmups[i], state, leaky_rate, bias_hag_multi, activation_function)\n",
-    "\n",
-    "    capa_history = []\n",
-    "    for i in range(steps):\n",
-    "        state = update_reservoir(W, Win_capa, inputs[i], state, leaky_rate, bias_hag_multi, activation_function)\n",
-    "        capa_history.append(state)\n",
-    "    capa_history = np.array(capa_history)\n",
-    "\n",
-    "    # Measallcapsure capacities on inputs and states after removing a \"warmup period\"\n",
-    "    # If you require more extensive printed output of individual capacities:\n",
-    "    # set verbose = 1\n",
-    "    Citer=CAP.capacity_iterator(maxdeg=MAX_DEG, maxdel=MAX_DEL)#, verbose = 1)\n",
-    "    totalcap_adsp,allcaps_adsp,numcaps_adsp,nodes = Citer.collect(inputs,capa_history)\n",
-    "\n",
-    "    print(\"\\nMeasured \",numcaps_adsp,\" capacities above threshold.\\nTotal capacity = \",totalcap_adsp)\n",
-    "    V_adsp.append(cap2vec(allcaps_adsp,maxdel = MAX_DEL, maxdeg = MAX_DEG))\n"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "c2244fa0-fb6b-4dc1-aa43-112e2ac98047",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-09-09T11:12:01.961425Z",
-     "iopub.status.busy": "2024-09-09T11:12:01.960646Z",
-     "iopub.status.idle": "2024-09-09T11:12:01.997951Z",
-     "shell.execute_reply": "2024-09-09T11:12:01.997259Z",
-     "shell.execute_reply.started": "2024-09-09T11:12:01.961368Z"
-    }
-   },
-   "source": [
-    "\n",
-    "# Assuming V_adsp is defined somewhere and MAX_DEG is set\n",
-    "V_adsp_array = np.array(V_adsp)  # This should be a 3D array where each slice [i,:,:] corresponds to a 'degree'\n",
-    "delrange = np.arange(1, MAX_DEG + 1)\n",
-    "\n",
-    "# Create a figure for the plot\n",
-    "plt.figure(figsize=(10, 6))\n",
-    "\n",
-    "# This will keep track of the cumulative height of the bars (starting at zero)\n",
-    "cumulative_height = np.zeros(8)\n",
-    "\n",
-    "# Loop through each component and plot\n",
-    "for component in range(V_adsp_array.shape[2]):\n",
-    "    component_cap = np.sum(V_adsp_array,axis=1)[:,component]\n",
-    "    plt.bar(range(0,30,4), component_cap, bottom=cumulative_height, label=f'{component + 1}')\n",
-    "    cumulative_height += component_cap\n",
-    "\n",
-    "plt.xlabel('step')\n",
-    "plt.ylabel('Information procssing capacity')\n",
-    "plt.title('Information procssing capacity over time')\n",
-    "plt.legend()\n"
    ]
   },
   {
@@ -1723,8 +1423,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "N_JOBS = -1\n",
     "RIDGE_COEF= 1e-9 if ridge is None else 10**ridge"
    ]
