--- a/1.general_framework.ipynb
+++ b/1.general_framework.ipynb
@@ -21,6 +21,119 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2e162795-bf9d-4bcf-8c16-7411242419fa",
+   "metadata": {},
+   "source": [
+    "# Idea"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13b54979-e907-4333-b442-f5878a053250",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import numpy as np\n",
+    "import matplotlib as mpl\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Ensure output directory exists\n",
+    "os.makedirs(\"outputs/images\", exist_ok=True)\n",
+    "\n",
+    "# Configure PDF backend\n",
+    "mpl.rcParams['pdf.fonttype'] = 42\n",
+    "mpl.rcParams['ps.fonttype'] = 42\n",
+    "\n",
+    "# Data definitions\n",
+    "x = np.linspace(0, 3, 400)\n",
+    "delta_w = 0.2\n",
+    "t = np.linspace(0, 10, 500)\n",
+    "u = 1.0 + 0.5 * np.sin(2 * np.pi * 0.3 * t)\n",
+    "t_event = 5.0\n",
+    "\n",
+    "# Activations\n",
+    "y_tanh = np.tanh(x)\n",
+    "y_lin = x\n",
+    "before_span = (0.7, 1.0)\n",
+    "after_span = (before_span[0] + delta_w, before_span[1] + delta_w)\n",
+    "\n",
+    "y_A_time = np.tanh(u)\n",
+    "u_B = u.copy()\n",
+    "u_B[t >= t_event] += delta_w\n",
+    "y_B_time = np.tanh(u_B)\n",
+    "\n",
+    "# Colors\n",
+    "orange = \"#E66100\"\n",
+    "yellow = \"#FFC100\"\n",
+    "gray = \"#888888\"\n",
+    "blue = \"#3251a8\"\n",
+    "\n",
+    "fig, axes = plt.subplots(1, 2, figsize=(14, 4), dpi=150)\n",
+    "\n",
+    "# Panel (c): Tanh effect illustration with curved arrow\n",
+    "ax = axes[0]\n",
+    "ax.plot(x, y_tanh, color=gray, label='tanh(x)')\n",
+    "ax.plot(x, y_lin, color=blue, label='linear')\n",
+    "\n",
+    "# Plot before and after segments on tanh curve\n",
+    "x_before = np.linspace(before_span[0], before_span[1], 100)\n",
+    "x_after = np.linspace(after_span[0], after_span[1], 100)\n",
+    "ax.plot(x_before, np.tanh(x_before), color=orange, lw=3, label='Before shift')\n",
+    "ax.plot(x_after, np.tanh(x_after), color=yellow, lw=3, label='After shift')\n",
+    "\n",
+    "# Add curved arrow to indicate shift Δw\n",
+    "start_x, end_x = (before_span[1] + before_span[0]) / 2, (after_span[1] + after_span[0]) / 2\n",
+    "start_y, end_y = np.tanh(start_x), np.tanh(end_x)\n",
+    "ax.annotate('', xy=(end_x, end_y), xytext=(start_x, start_y),\n",
+    "            arrowprops=dict(arrowstyle='->', color=gray, ls='--', lw=2,\n",
+    "                            connectionstyle='arc3,rad=0.3'))\n",
+    "ax.text((start_x+end_x)/2, max(start_y, end_y)+0.05, r'$\\Delta w$ shift',\n",
+    "        color=gray, fontsize='small', ha='center')\n",
+    "\n",
+    "# Styling\n",
+    "ax.set_xlabel('Input')\n",
+    "ax.set_ylabel('Activation')\n",
+    "ax.set_xlim(0.25, 2)\n",
+    "ax.set_ylim(-0.05, 1.1)\n",
+    "ax.grid(color='lightgray', linestyle='--', linewidth=0.5)\n",
+    "ax.legend(frameon=False, fontsize='small', loc='lower right')\n",
+    "ax.text(0.02, 0.95, '(c)', transform=ax.transAxes, weight='bold')\n",
+    "\n",
+    "# Panel (d): Time evolution illustration\n",
+    "ax = axes[1]\n",
+    "pre = t < t_event\n",
+    "post = ~pre\n",
+    "dash = 5\n",
+    "n_pre = pre.sum()\n",
+    "\n",
+    "# Plot A before event in dashed alternating pattern\n",
+    "for i in range(0, n_pre-dash, dash):\n",
+    "    idx = np.arange(i, i+dash)\n",
+    "    ax.plot(t[pre][idx], y_A_time[pre][idx],\n",
+    "            color=orange if (i//dash) % 2 == 0 else yellow, lw=2)\n",
+    "# Plot after event\n",
+    "ax.plot(t[post], y_A_time[post], color=orange, lw=2, label='Neuron A')\n",
+    "ax.plot(t[post], y_B_time[post], color=yellow, lw=2, label='Neuron B')\n",
+    "ax.axvline(t_event, ls='--', color=gray, lw=1.5, label='Event')\n",
+    "\n",
+    "# Styling\n",
+    "ax.set_xlabel('Time')\n",
+    "ax.set_xlim(0, 10)\n",
+    "ax.set_ylim(0, 1.05)\n",
+    "ax.grid(color='lightgray', linestyle='--', linewidth=0.5)\n",
+    "ax.legend(frameon=False, fontsize='small', loc='lower right')\n",
+    "ax.text(0.02, 0.95, '(d)', transform=ax.transAxes, weight='bold')\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "path = \"outputs/images/hag_effect.pdf\"\n",
+    "fig.savefig(path, bbox_inches='tight')\n",
+    "path"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "eb44384e-7cbc-4611-a015-e1c073f61aa9",
    "metadata": {},
    "source": [
@@ -543,7 +656,7 @@
    },
    "outputs": [],
    "source": [
-    "from reservoir.activation_functions import tanh\n",
+    "from models.activation_functions import tanh\n",
     "\n",
     "# the activation function choosen for the rest of the experiment\n",
     "# activation_function = lambda x : sigmoid(2*(x-0.5))tanh(x)\n",
@@ -575,10 +688,10 @@
     "\n",
     "RESERVOIR_SIZE = 500\n",
     "\n",
-    "# We want the size of the reservoir to be at least RESERVOIR_SIZE\n",
+    "# We want the size of the models to be at least RESERVOIR_SIZE\n",
     "K = math.ceil(RESERVOIR_SIZE / common_size)\n",
     "n = common_size * K\n",
-    "print(\"Dimension of our reservoir :\", n)\n",
+    "print(\"Dimension of our models :\", n)\n",
     "print(\"Copy of each time serie :\", K)\n",
     "print(\"Number of multivariate inputs :\", common_size)"
    ]
@@ -696,7 +809,7 @@
    },
    "outputs": [],
    "source": [
-    "from reservoir.reservoir import init_matrices\n",
+    "from models.reservoir import init_matrices\n",
     "from connexion_generation.hag import run_algorithm\n",
     "from scipy import sparse\n",
     "\n",
@@ -795,7 +908,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from reservoir.reservoir import init_matrices\n",
+    "from models.reservoir import init_matrices\n",
     "from scipy import sparse\n",
     "from scipy import stats\n",
     "\n",
@@ -961,7 +1074,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from reservoir.reservoir import update_reservoir\n",
+    "from models.reservoir import update_reservoir\n",
     "\n",
     "states_history_multi = []\n",
     "neurons_state = np.random.uniform(0, 1, bias_hag_multi.size)\n",
@@ -1012,7 +1125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from reservoir.reservoir import update_reservoir\n",
+    "from models.reservoir import update_reservoir\n",
     "\n",
     "states_history_random = []\n",
     "neurons_state = np.random.uniform(0, 1, bias_random_multi.size)\n",
@@ -1586,7 +1699,7 @@
    "outputs": [],
    "source": [
     "if False:  # TODO: change condition for when we want to plot univariate data\n",
-    "    # Create a list to store the arrays with the same shape as the expected input of the reservoir\n",
+    "    # Create a list to store the arrays with the same shape as the expected input of the models\n",
     "\n",
     "    train_data_uni = [ts.reshape(-1, 1) for ts in X_train]\n",
     "    test_data_uni = [ts.reshape(-1, 1) for ts in X_test]\n",
