Implementation rnn-mean_hag

--- a/2.test performances.ipynb
+++ b/2.test performances.ipynb
@@ -402,6 +402,15 @@
     "    evaluate as lstm_evaluate,\n",
     ")\n",
     "\n",
+    "# new imports for HAG branch\n",
+    "from performances.utility import retrieve_best_model\n",
+    "from hag.hag import run_algorithm\n",
+    "from models.reservoir import init_matrices\n",
+    "import math\n",
+    "from scipy import stats\n",
+    "from numpy import random\n",
+    "\n",
+    "# device setup\n",
     "if torch.backends.mps.is_available():\n",
     "    DEVICE = torch.device(\"mps\")\n",
     "elif torch.cuda.is_available():\n",
@@ -412,25 +421,27 @@
     "def evaluate_dataset_on_test_rnn(\n",
     "    study,\n",
     "    dataset_name,\n",
-    "    function_name,     # e.g. \"lstm_last\"\n",
-    "    pretrain_data,     # unused for LSTM, keep for signature\n",
-    "    X_train,           # list of train sequences or array\n",
-    "    X_test,            # list of test sequences or array\n",
-    "    Y_train,           # labels or targets for train\n",
-    "    Y_test,            # labels or targets for test\n",
+    "    function_name,        # e.g. \"lstm_last\", \"rnn\", \"rnn-mean_hag\"\n",
+    "    pretrain_data,        # list/array of pretraining bands for HAG\n",
+    "    X_train,              # list of train sequences or array\n",
+    "    X_test,               # list of test sequences or array\n",
+    "    Y_train,              # labels or targets for train\n",
+    "    Y_test,               # labels or targets for test\n",
     "    is_instances_classification,\n",
     "    nb_trials=8,\n",
     "    record_metrics=False\n",
     "):\n",
-    "    # 1) best hyperparameters\n",
+    "    # 1) best hyperparameters for LSTM/RNN\n",
     "    hp = study.best_trial.params.copy()\n",
     "    batch_size = hp.pop(\"batch_size\")\n",
     "    epochs     = hp.pop(\"epochs\")\n",
     "    lr         = hp.pop(\"learning_rate\")\n",
-    "    hidden     = hp.pop(\"hidden_size\")\n",
     "    nlayers    = hp.pop(\"num_layers\")\n",
-    "    bidir      = hp.pop(\"bidirectional\")\n",
     "    dropout    = hp.pop(\"dropout\")\n",
+    "    \n",
+    "    if function_name in [\"lstm\", \"rnn\"]:\n",
+    "            hidden     = hp.pop(\"hidden_size\")\n",
+    "            bidir      = hp.pop(\"bidirectional\")\n",
     "\n",
     "    task_type = \"classification\" if is_instances_classification else \"regression\"\n",
     "    criterion = torch.nn.CrossEntropyLoss() if task_type==\"classification\" else torch.nn.MSELoss()\n",
@@ -446,7 +457,6 @@
     "\n",
     "        # — build PyTorch Dataset & DataLoader —\n",
     "        if is_instances_classification:\n",
-    "            # variable-length sequence classification\n",
     "            train_ds = SequenceDataset(X_train, Y_train)\n",
     "            train_lens = [len(x) for x in X_train]\n",
     "            if len(set(train_lens))>1:\n",
@@ -464,7 +474,6 @@
     "                test_loader = DataLoader(test_ds, batch_size=batch_size, shuffle=False, collate_fn=pad_collate)\n",
     "\n",
     "        else:\n",
-    "            # fixed-window forecasting\n",
     "            WINDOW = 100\n",
     "            X_tr_win, y_tr_tgt = make_sliding_windows(X_train, y=Y_train, window=WINDOW)\n",
     "            X_test_win, y_test_tgt = make_sliding_windows(X_test, y=Y_test, window=WINDOW)\n",
@@ -474,6 +483,7 @@
     "\n",
     "            test_ds = PrecomputedForecastDataset(X_test_win, y_test_tgt)\n",
     "            test_loader = DataLoader(test_ds, batch_size=batch_size, shuffle=False)\n",
+    "\n",
     "        # infer dims\n",
     "        sample_x, sample_y = train_ds[0]\n",
     "        D_in  = sample_x.shape[-1]\n",
@@ -484,33 +494,106 @@
     "\n",
     "        # instantiate models\n",
     "        if function_name == \"lstm_last\":\n",
-    "            model = LSTMModel(input_size=D_in,\n",
-    "                    hidden_size=hidden,\n",
-    "                    num_layers=nlayers,\n",
-    "                    output_size=D_out,\n",
-    "                    dropout=dropout,\n",
-    "                    bidirectional=bidir).to(DEVICE)\n",
+    "            model = LSTMModel(\n",
+    "                input_size=D_in,\n",
+    "                hidden_size=hidden,\n",
+    "                num_layers=nlayers,\n",
+    "                output_size=D_out,\n",
+    "                dropout=dropout,\n",
+    "                bidirectional=bidir\n",
+    "            ).to(DEVICE)\n",
+    "            # train normally\n",
+    "            optimizer = torch.optim.Adam(model.parameters(), lr=lr)\n",
+    "            for _ in range(epochs):\n",
+    "                _ = lstm_train(model, train_loader, criterion, optimizer, task_type=task_type)\n",
+    "\n",
     "        elif function_name == \"rnn\":\n",
-    "            model = RNNModel(input_size=D_in,\n",
-    "                      hidden_size=hidden,\n",
-    "                      num_layers=nlayers,\n",
-    "                      output_size=D_out,\n",
-    "                      dropout=dropout,\n",
-    "                      bidirectional=bidir,\n",
-    "                      ).to(DEVICE)\n",
-    "        optimizer = torch.optim.Adam(model.parameters(), lr=lr)\n",
+    "            model = RNNModel(\n",
+    "                input_size=D_in,\n",
+    "                hidden_size=hidden,\n",
+    "                num_layers=nlayers,\n",
+    "                output_size=D_out,\n",
+    "                dropout=dropout,\n",
+    "                bidirectional=bidir\n",
+    "            ).to(DEVICE)\n",
+    "            optimizer = torch.optim.Adam(model.parameters(), lr=lr)\n",
+    "            for _ in range(epochs):\n",
+    "                _ = lstm_train(model, train_loader, criterion, optimizer, task_type=task_type)\n",
     "\n",
-    "        # train on *all* training data\n",
-    "        for _ in range(epochs):\n",
-    "            _ = lstm_train(model, train_loader, criterion, optimizer, task_type=task_type)\n",
+    "        elif function_name == \"rnn-mean_hag\":\n",
+    "            # HAG-based reservoir initialization\n",
+    "            # 1) Retrieve best HAG hyperparameters\n",
+    "            hag_study = retrieve_best_model(\"hadsp\", dataset_name, False, variate_type=\"multi\", data_type=\"normal\")\n",
+    "            hyper = {k: v for k, v in hag_study.best_trial.params.items()}\n",
+    "            if 'variance_target' not in hyper and 'min_variance' in hyper:\n",
+    "                hyper['variance_target'] = hyper.pop('min_variance')\n",
+    "            hyper['use_full_instance'] = not is_instances_classification\n",
     "\n",
-    "        # evaluate on *one* test loader\n",
+    "            # 2) Build reservoir matrices\n",
+    "            input_connectivity = 1\n",
+    "            common_size = X_train[0].shape[1] if is_instances_classification else X_train.shape[1]\n",
+    "            K = math.ceil(hyper['network_size'] / common_size)\n",
+    "            n = common_size * K\n",
+    "            Win, W, bias = init_matrices(n, input_connectivity, hyper['connectivity'], K,\n",
+    "                w_distribution=stats.uniform(loc=-1, scale=2), seed=random.randint(0, 1000))\n",
+    "            bias *= hyper['bias_scaling']\n",
+    "            Win *= hyper['input_scaling']\n",
+    "\n",
+    "            # 3) Adapt weights via HAG\n",
+    "            activation_function = np.tanh\n",
+    "            fold_idx = seed\n",
+    "            X_pre = pretrain_data\n",
+    "            W, _ = run_algorithm(\n",
+    "                W, Win, bias,\n",
+    "                hyper['leaky_rate'], activation_function,\n",
+    "                X_pre, hyper['weight_increment'],\n",
+    "                hyper['target_rate'], hyper['rate_spread'],\n",
+    "                function_name, multiple_instances=is_instances_classification,\n",
+    "                min_increment=hyper['min_increment'], max_increment=hyper['max_increment'],\n",
+    "                use_full_instance=hyper['use_full_instance'], max_partners=np.inf,\n",
+    "                method=\"pearson\", n_jobs=1\n",
+    "            )\n",
+    "\n",
+    "            # 4) Readout training\n",
+    "            from performances.esn_model_evaluation import train_model_for_classification, train_model_for_prediction, init_readout, init_reservoir\n",
+    "            reservoir = init_reservoir(W, Win, bias, hyper['leaky_rate'], activation_function)\n",
+    "            RIDGE_COEF = 10 ** hyper['ridge']\n",
+    "            readout = init_readout(ridge_coef=RIDGE_COEF)\n",
+    "            start_step = SLICE_RANGE.start if not is_instances_classification else None\n",
+    "            if is_instances_classification:\n",
+    "                train_model_for_classification(reservoir, readout, X_train, Y_train, n_jobs=1, mode=\"sequence-to-vector\")\n",
+    "            else:\n",
+    "                _ = train_model_for_prediction(reservoir, readout, X_train, Y_train, warmup=start_step, n_jobs=1)\n",
+    "            Wout = readout.Wout\n",
+    "            bias_out = readout.bias.reshape(-1)\n",
+    "\n",
+    "            # 5) Instantiate PyTorch RNNModel and overwrite weights\n",
+    "            model = RNNModel(\n",
+    "                input_size=D_in,\n",
+    "                hidden_size=n,\n",
+    "                num_layers=1,\n",
+    "                output_size=D_out,\n",
+    "                dropout=dropout,\n",
+    "                bidirectional=False\n",
+    "            ).to(DEVICE)\n",
+    "            with torch.no_grad():\n",
+    "                model.rnn.weight_ih_l0.copy_(torch.tensor(Win, dtype=torch.float32, device=DEVICE))\n",
+    "                model.rnn.weight_hh_l0.copy_(torch.tensor(W, dtype=torch.float32, device=DEVICE))\n",
+    "                model.rnn.bias_ih_l0.zero_()\n",
+    "                model.rnn.bias_hh_l0.copy_(torch.tensor(bias, dtype=torch.float32, device=DEVICE))\n",
+    "                model.fc.weight.copy_(torch.tensor(Wout.T, dtype=torch.float32, device=DEVICE))\n",
+    "                model.fc.bias.copy_(torch.tensor(bias_out, dtype=torch.float32, device=DEVICE))\n",
+    "\n",
+    "        else:\n",
+    "            raise ValueError(f\"Unknown function_name: {function_name}\")\n",
+    "\n",
+    "        # evaluate\n",
     "        metric = lstm_evaluate(model, test_loader, task_type=task_type)\n",
     "        all_scores.append(metric)\n",
     "\n",
     "    if record_metrics:\n",
     "        raise NotImplementedError(\"Hidden-state metrics for LSTM not yet supported.\")\n",
-    "    return all_scores"
+    "    return all_scores\n"
    ]
   },
   {
@@ -727,7 +810,9 @@
   {
    "cell_type": "markdown",
    "id": "934bb5ed-a01e-4874-8b28-a9d7abde179d",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# HPO Comparaison"
    ]
@@ -1004,7 +1089,7 @@
     "variate_type = \"multi\"  # \"multi\" or \"uni\"\n",
     "\n",
     "\n",
-    "for dataset_name in [\"CatsDogs\", \"JapaneseVowels\", \"FSDD\"]:\n",
+    "for dataset_name in [\"CatsDogs\"]:\n",
     "    new_results = pd.DataFrame(columns=columns)\n",
     "    # Can be \"MackeyGlass\", \"Lorenz\", \"Sunspot_daily\", \"CatsDogs\", \"JapaneseVowels\", \"FSDD\", \"SpokenArabicDigits\", \"SPEECHCOMMANDS\"\n",
     "    pretrain_data, train_data, test_data, Y_train, Y_test, is_multivariate, is_instances_classification = load_data(dataset_name, data_type, noise_std, visualize=True)\n",
@@ -1016,12 +1101,12 @@
     "    # Simulate your data and loop for evaluation\n",
     "    \n",
     "    # \"random_ee\", \"random_ei\", \"diag_ee\", \"diag_ei\", \"ip_correct\", \"anti-oja_fast\",  \"ip-anti-oja_fast\", \"hadsp\", \"desp\", \"lstm_last\", \"rnn\"\n",
-    "    for function_name in [\"rnn\"]:\n",
+    "    for function_name in [\"rnn-mean_hag\"]:\n",
     "        print(function_name)\n",
     "        study = retrieve_best_model(function_name, dataset_name, is_multivariate, variate_type = \"multi\", data_type = \"normal\", prefix=\"new_tpe\")\n",
     "\n",
     "        # dispatch to the correct evaluator\n",
-    "        if function_name in [\"lstm_last\", \"rnn\"]:\n",
+    "        if function_name in [\"lstm_last\", \"rnn\", \"rnn-mean_hag\"]:\n",
     "            scores = evaluate_dataset_on_test_rnn(\n",
     "                study,\n",
     "                dataset_name,\n",
@@ -1585,8 +1670,7 @@
     "\n",
     "# Evaluating\n",
     "from performances.esn_model_evaluation import train_model_for_classification, predict_model_for_classification, compute_score\n",
-    "from performances.esn_model_evaluation import (train_model_for_prediction, init_reservoir, init_ip_reservoir, init_local_rule_reservoir, \n",
-    "                                                init_ip_local_rule_reservoir, init_readout)\n",
+    "from performances.esn_model_evaluation import (train_model_for_prediction, init_reservoir, init_ip_reservoir, init_local_rule_reservoir, init_ip_local_rule_reservoir, init_readout)\n",
     "from analysis.richness import spectral_radius, pearson, squared_uncoupled_dynamics_alternative, distance_correlation\n",
     "\n",
     "\n",
