--- a/2.test performances.ipynb
+++ b/2.test performances.ipynb
@@ -2,12 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "88f790cf",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-05-19T13:52:43.738827Z",
      "start_time": "2025-05-19T13:52:43.736629Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2025-08-14T09:26:12.436081Z",
+     "iopub.status.busy": "2025-08-14T09:26:12.435910Z",
+     "iopub.status.idle": "2025-08-14T09:26:13.508039Z",
+     "shell.execute_reply": "2025-08-14T09:26:13.507774Z",
+     "shell.execute_reply.started": "2025-08-14T09:26:12.436059Z"
     },
     "tags": []
    },
@@ -27,12 +34,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "11cda032b8a2214f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-05-19T13:52:44.515097Z",
      "start_time": "2025-05-19T13:52:44.512662Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2025-08-14T09:26:13.508578Z",
+     "iopub.status.busy": "2025-08-14T09:26:13.508447Z",
+     "iopub.status.idle": "2025-08-14T09:26:13.511190Z",
+     "shell.execute_reply": "2025-08-14T09:26:13.510917Z",
+     "shell.execute_reply.started": "2025-08-14T09:26:13.508568Z"
     }
    },
    "outputs": [],
@@ -92,12 +106,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "4490eac1cc1341aa",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-05-19T13:52:45.980798Z",
      "start_time": "2025-05-19T13:52:45.971372Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2025-08-14T09:26:13.512357Z",
+     "iopub.status.busy": "2025-08-14T09:26:13.512270Z",
+     "iopub.status.idle": "2025-08-14T09:26:22.796188Z",
+     "shell.execute_reply": "2025-08-14T09:26:22.795936Z",
+     "shell.execute_reply.started": "2025-08-14T09:26:13.512348Z"
     }
    },
    "outputs": [],
@@ -219,18 +240,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "5606001921c4818e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-05-19T13:52:51.065846Z",
      "start_time": "2025-05-19T13:52:51.051503Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2025-08-14T09:26:22.796739Z",
+     "iopub.status.busy": "2025-08-14T09:26:22.796589Z",
+     "iopub.status.idle": "2025-08-14T09:26:29.346596Z",
+     "shell.execute_reply": "2025-08-14T09:26:29.346340Z",
+     "shell.execute_reply.started": "2025-08-14T09:26:22.796729Z"
     }
    },
    "outputs": [],
    "source": [
     "from scipy import stats\n",
     "from numpy import random\n",
+    "import tqdm \n",
     "\n",
     "# Evaluating\n",
     "from performances.esn_model_evaluation import train_model_for_classification, predict_model_for_classification, compute_score\n",
@@ -384,10 +413,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "7f604b2e-f645-45f1-a7cb-3d8311d9c5a6",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-08-14T09:26:29.347217Z",
+     "iopub.status.busy": "2025-08-14T09:26:29.347039Z",
+     "iopub.status.idle": "2025-08-14T09:26:29.391888Z",
+     "shell.execute_reply": "2025-08-14T09:26:29.391645Z",
+     "shell.execute_reply.started": "2025-08-14T09:26:29.347208Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/Caskroom/miniforge/base/envs/hag_env/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import torch\n",
@@ -452,7 +498,7 @@
     "\n",
     "    all_scores = []\n",
     "\n",
-    "    for seed in range(nb_trials):\n",
+    "    for seed in tqdm.tqdm(range(nb_trials), desc=\"Seeds\", unit=\"seed\"):\n",
     "        torch.manual_seed(seed)\n",
     "\n",
     "        # — build PyTorch Dataset & DataLoader —\n",
@@ -606,12 +652,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "d59ae41a-4c2c-4d17-adcf-a812bdd9d42b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-05-19T13:52:52.151781Z",
      "start_time": "2025-05-19T13:52:52.146748Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2025-08-14T09:26:29.392255Z",
+     "iopub.status.busy": "2025-08-14T09:26:29.392174Z",
+     "iopub.status.idle": "2025-08-14T09:26:29.541848Z",
+     "shell.execute_reply": "2025-08-14T09:26:29.541546Z",
+     "shell.execute_reply.started": "2025-08-14T09:26:29.392247Z"
     }
    },
    "outputs": [],
@@ -1066,17 +1119,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "453e899e0651f36b",
    "metadata": {
     "ExecuteTime": {
      "start_time": "2025-05-12T09:25:33.718433Z"
     },
+    "execution": {
+     "iopub.execute_input": "2025-08-14T20:41:19.270323Z",
+     "iopub.status.busy": "2025-08-14T20:41:19.269984Z",
+     "iopub.status.idle": "2025-08-15T03:40:57.089111Z",
+     "shell.execute_reply": "2025-08-15T03:40:57.088332Z",
+     "shell.execute_reply.started": "2025-08-14T20:41:19.270299Z"
+    },
     "jupyter": {
      "is_executing": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/Caskroom/miniforge/base/envs/hag_env/lib/python3.12/site-packages/scipy/integrate/_ivp/ivp.py:621: UserWarning: The following arguments have no effect for a chosen solver: `seed`.\n",
+      "  solver = method(fun, t0, y0, tf, vectorized=vectorized, **options)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using window length (nperseg): 100 and hop: 1\n",
+      "Dropped the last time frame to match expected shape.\n",
+      "X_band.shape (15000, 153)\n",
+      "Using window length (nperseg): 100 and hop: 1\n",
+      "Dropped the last time frame to match expected shape.\n",
+      "X_band.shape (5000, 153)\n",
+      "Lorenz\n",
+      "rnn\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Seeds:   0%|          | 0/8 [6:59:37<?, ?seed/s]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 30\u001b[39m\n\u001b[32m     28\u001b[39m \u001b[38;5;66;03m# dispatch to the correct evaluator\u001b[39;00m\n\u001b[32m     29\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m function_name \u001b[38;5;129;01min\u001b[39;00m [\u001b[33m\"\u001b[39m\u001b[33mlstm_last\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mrnn\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mrnn-mean_hag\u001b[39m\u001b[33m\"\u001b[39m]:\n\u001b[32m---> \u001b[39m\u001b[32m30\u001b[39m     scores = \u001b[43mevaluate_dataset_on_test_rnn\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m     31\u001b[39m \u001b[43m        \u001b[49m\u001b[43mstudy\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     32\u001b[39m \u001b[43m        \u001b[49m\u001b[43mdataset_name\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     33\u001b[39m \u001b[43m        \u001b[49m\u001b[43mfunction_name\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     34\u001b[39m \u001b[43m        \u001b[49m\u001b[43mpretrain_data\u001b[49m\u001b[43m,\u001b[49m\u001b[43m   \u001b[49m\u001b[38;5;66;43;03m# this arg is ignored by the LSTM evaluator\u001b[39;49;00m\n\u001b[32m     35\u001b[39m \u001b[43m        \u001b[49m\u001b[43mtrain_data\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     36\u001b[39m \u001b[43m        \u001b[49m\u001b[43mtest_data\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     37\u001b[39m \u001b[43m        \u001b[49m\u001b[43mY_train\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     38\u001b[39m \u001b[43m        \u001b[49m\u001b[43mY_test\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     39\u001b[39m \u001b[43m        \u001b[49m\u001b[43mis_instances_classification\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     40\u001b[39m \u001b[43m        \u001b[49m\u001b[43mnb_trials\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m8\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m     41\u001b[39m \u001b[43m        \u001b[49m\u001b[43mrecord_metrics\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\n\u001b[32m     42\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     43\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m     44\u001b[39m     scores = evaluate_dataset_on_test(\n\u001b[32m     45\u001b[39m         study, \n\u001b[32m     46\u001b[39m         dataset_name,\n\u001b[32m   (...)\u001b[39m\u001b[32m     55\u001b[39m         record_metrics=\u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[32m     56\u001b[39m     )\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 130\u001b[39m, in \u001b[36mevaluate_dataset_on_test_rnn\u001b[39m\u001b[34m(study, dataset_name, function_name, pretrain_data, X_train, X_test, Y_train, Y_test, is_instances_classification, nb_trials, record_metrics)\u001b[39m\n\u001b[32m    128\u001b[39m     optimizer = torch.optim.Adam(model.parameters(), lr=lr)\n\u001b[32m    129\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(epochs):\n\u001b[32m--> \u001b[39m\u001b[32m130\u001b[39m         _ = \u001b[43mlstm_train\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrain_loader\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcriterion\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moptimizer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtask_type\u001b[49m\u001b[43m=\u001b[49m\u001b[43mtask_type\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    132\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m function_name == \u001b[33m\"\u001b[39m\u001b[33mrnn-mean_hag\u001b[39m\u001b[33m\"\u001b[39m:\n\u001b[32m    133\u001b[39m     \u001b[38;5;66;03m# HAG-based reservoir initialization\u001b[39;00m\n\u001b[32m    134\u001b[39m     \u001b[38;5;66;03m# 1) Retrieve best HAG hyperparameters\u001b[39;00m\n\u001b[32m    135\u001b[39m     hag_study = retrieve_best_model(\u001b[33m\"\u001b[39m\u001b[33mhadsp\u001b[39m\u001b[33m\"\u001b[39m, dataset_name, \u001b[38;5;28;01mFalse\u001b[39;00m, variate_type=\u001b[33m\"\u001b[39m\u001b[33mmulti\u001b[39m\u001b[33m\"\u001b[39m, data_type=\u001b[33m\"\u001b[39m\u001b[33mnormal\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Code/Finebouche/hag/models/rnn.py:236\u001b[39m, in \u001b[36mtrain\u001b[39m\u001b[34m(model, loader, criterion, optimizer, task_type)\u001b[39m\n\u001b[32m    233\u001b[39m     target = y_batch\n\u001b[32m    235\u001b[39m loss = criterion(preds, target)\n\u001b[32m--> \u001b[39m\u001b[32m236\u001b[39m \u001b[43mloss\u001b[49m\u001b[43m.\u001b[49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    237\u001b[39m optimizer.step()\n\u001b[32m    238\u001b[39m total_loss += loss.item() * X_batch.size(\u001b[32m0\u001b[39m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/opt/homebrew/Caskroom/miniforge/base/envs/hag_env/lib/python3.12/site-packages/torch/_tensor.py:648\u001b[39m, in \u001b[36mTensor.backward\u001b[39m\u001b[34m(self, gradient, retain_graph, create_graph, inputs)\u001b[39m\n\u001b[32m    638\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m has_torch_function_unary(\u001b[38;5;28mself\u001b[39m):\n\u001b[32m    639\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m handle_torch_function(\n\u001b[32m    640\u001b[39m         Tensor.backward,\n\u001b[32m    641\u001b[39m         (\u001b[38;5;28mself\u001b[39m,),\n\u001b[32m   (...)\u001b[39m\u001b[32m    646\u001b[39m         inputs=inputs,\n\u001b[32m    647\u001b[39m     )\n\u001b[32m--> \u001b[39m\u001b[32m648\u001b[39m \u001b[43mtorch\u001b[49m\u001b[43m.\u001b[49m\u001b[43mautograd\u001b[49m\u001b[43m.\u001b[49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    649\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgradient\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mretain_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcreate_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minputs\u001b[49m\u001b[43m=\u001b[49m\u001b[43minputs\u001b[49m\n\u001b[32m    650\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/opt/homebrew/Caskroom/miniforge/base/envs/hag_env/lib/python3.12/site-packages/torch/autograd/__init__.py:353\u001b[39m, in \u001b[36mbackward\u001b[39m\u001b[34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[39m\n\u001b[32m    348\u001b[39m     retain_graph = create_graph\n\u001b[32m    350\u001b[39m \u001b[38;5;66;03m# The reason we repeat the same comment below is that\u001b[39;00m\n\u001b[32m    351\u001b[39m \u001b[38;5;66;03m# some Python versions print out the first line of a multi-line function\u001b[39;00m\n\u001b[32m    352\u001b[39m \u001b[38;5;66;03m# calls in the traceback and some print out the last line\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m353\u001b[39m \u001b[43m_engine_run_backward\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    354\u001b[39m \u001b[43m    \u001b[49m\u001b[43mtensors\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    355\u001b[39m \u001b[43m    \u001b[49m\u001b[43mgrad_tensors_\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    356\u001b[39m \u001b[43m    \u001b[49m\u001b[43mretain_graph\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    357\u001b[39m \u001b[43m    \u001b[49m\u001b[43mcreate_graph\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    358\u001b[39m \u001b[43m    \u001b[49m\u001b[43minputs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    359\u001b[39m \u001b[43m    \u001b[49m\u001b[43mallow_unreachable\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[32m    360\u001b[39m \u001b[43m    \u001b[49m\u001b[43maccumulate_grad\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[32m    361\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/opt/homebrew/Caskroom/miniforge/base/envs/hag_env/lib/python3.12/site-packages/torch/autograd/graph.py:824\u001b[39m, in \u001b[36m_engine_run_backward\u001b[39m\u001b[34m(t_outputs, *args, **kwargs)\u001b[39m\n\u001b[32m    822\u001b[39m     unregister_hooks = _register_logging_hooks_on_whole_graph(t_outputs)\n\u001b[32m    823\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m824\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mVariable\u001b[49m\u001b[43m.\u001b[49m\u001b[43m_execution_engine\u001b[49m\u001b[43m.\u001b[49m\u001b[43mrun_backward\u001b[49m\u001b[43m(\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# Calls into the C++ engine to run the backward pass\u001b[39;49;00m\n\u001b[32m    825\u001b[39m \u001b[43m        \u001b[49m\u001b[43mt_outputs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\n\u001b[32m    826\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# Calls into the C++ engine to run the backward pass\u001b[39;00m\n\u001b[32m    827\u001b[39m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[32m    828\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m attach_logging_hooks:\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -1089,7 +1195,7 @@
     "variate_type = \"multi\"  # \"multi\" or \"uni\"\n",
     "\n",
     "\n",
-    "for dataset_name in [\"CatsDogs\"]:\n",
+    "for dataset_name in [\"Lorenz\", \"Sunspot_daily\"]:\n",
     "    new_results = pd.DataFrame(columns=columns)\n",
     "    # Can be \"MackeyGlass\", \"Lorenz\", \"Sunspot_daily\", \"CatsDogs\", \"JapaneseVowels\", \"FSDD\", \"SpokenArabicDigits\", \"SPEECHCOMMANDS\"\n",
     "    pretrain_data, train_data, test_data, Y_train, Y_test, is_multivariate, is_instances_classification = load_data(dataset_name, data_type, noise_std, visualize=True)\n",
@@ -1101,7 +1207,7 @@
     "    # Simulate your data and loop for evaluation\n",
     "    \n",
     "    # \"random_ee\", \"random_ei\", \"diag_ee\", \"diag_ei\", \"ip_correct\", \"anti-oja_fast\",  \"ip-anti-oja_fast\", \"hadsp\", \"desp\", \"lstm_last\", \"rnn\"\n",
-    "    for function_name in [\"rnn-mean_hag\"]:\n",
+    "    for function_name in [\"rnn\", \"rnn-mean_hag\"]:\n",
     "        print(function_name)\n",
     "        study = retrieve_best_model(function_name, dataset_name, is_multivariate, variate_type = \"multi\", data_type = \"normal\", prefix=\"new_tpe\")\n",
     "\n",
@@ -1192,13 +1298,20 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "afc86944f1a29e14",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.status.busy": "2025-08-15T03:40:57.089309Z",
+     "iopub.status.idle": "2025-08-15T03:40:57.089420Z",
+     "shell.execute_reply": "2025-08-15T03:40:57.089364Z",
+     "shell.execute_reply.started": "2025-08-15T03:40:57.089359Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd \n",
     "\n",
-    "file_name = \"outputs/test_results/test_results_classification.csv\"\n",
+    "file_name = \"outputs/test_results/test_results_prediction.csv\"\n",
     "\n",
     "if 'file_name' not in locals() and 'file_name' not in globals():\n",
     "    file_name = \"outputs/test_results/test_results_prediction.csv\"  #  test_results_classification.csv or test_results_prediction.csv\n",
@@ -1221,7 +1334,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5f301fa1838a4b84",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.status.busy": "2025-08-15T03:40:57.089707Z",
+     "iopub.status.idle": "2025-08-15T03:40:57.089822Z",
+     "shell.execute_reply": "2025-08-15T03:40:57.089766Z",
+     "shell.execute_reply.started": "2025-08-15T03:40:57.089761Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
